Shorten the package name