@@ -27,7 +27,7 @@
                 <configuration>
                     <source>18</source>
                     <target>18</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!-- <compilerArgs>- -enable-preview</compilerArgs> -->
                 </configuration>
             </plugin>
 
@@ -42,7 +42,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>io.github.mimoguz.pixelj.Main</mainClass>
+                            <mainClass>pixelj.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -91,6 +91,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
